Change to two card layout on mobile / Fix Oops message

--- a/src/app/components/product-card/product-card.css
+++ b/src/app/components/product-card/product-card.css
@@ -1,10 +1,20 @@
+@import "../../common.css";
+
 .product {
-  width: 300px;
+  width: 125px;
   height: 91%;
   min-height: 433px;
   margin: 20px auto;
-  border: 1px solid #efefef;
   background-color: white;
+  padding: 0 15px;
+  @media (--larger-than-mobile) {
+    width: 200px;
+    border: 1px solid #efefef;
+    padding: 0;
+  }
+  @media (--larger-than-tablet) {
+    width: 300px;
+  }
   a {
     text-decoration: none;
     .img-container {
